discussion/kv_engine/142092/142092_rev47_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Store the TLS properties in the NIM [2.1/3]

Move the TLS properties from the Settings class over to the
network interface manager.

Change-Id: If49a35e0be061fa50f2da67c01f7af74248559ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-15 09:54:07.000000000
Message: 
Uploaded patch set 47: Patch Set 46 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 11:31:40.000000000
Message: 
Patch Set 47: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36883/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0125/0157]: test set with item_eviction...(145 ms) OK


99% tests passed, 1 tests failed out of 409

Total Test time (real) = 848.70 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36883/ )

Timeout of a CTest test 409/409 Test #256: ep_testsuite.full_eviction.magma ..............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36883/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31512/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.h:55:19:
error: no member named "mcbp" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9894/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:55:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doTlsReconfigure(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:57:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doDefineInterface(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:59:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doDeleteInterface(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:61:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doListInterface();
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:63:5: error: unknown type name "uniqueSslPtr" [clang-diagnostic-error]
    uniqueSslPtr createClientSslHandle();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9894/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:55:19:
error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9894/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8480/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/400/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10542/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11461/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11889/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11614/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19476/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
